Машинки адаптив шрифты

--- a/static/header/header.html
+++ b/static/header/header.html
@@ -1,10 +1,10 @@
 <div class="header__top_line">
-  <img class="top_line__logo" src="../images/phone.svg" alt="" />
+  <img class="top_line__phone" src="../images/phone.svg" alt="" />
   <ul class="text__top_line">
     <li class="text__top_line--red">Zadzwoń do nas!</li>
     <li>+48 501 140 391</li>
   </ul>
-  <img src="../images/fire.svg" alt="" />
+  <img class="top_line__logo" src="../images/fire.svg" alt="" />
   <ul class="text__top_line">
     <li class="text__top_line--red">Napisz do nas e-mail!</li>
     <li>biuro@sexycars.pl</li>
