--- a/static/main/main.html
+++ b/static/main/main.html
@@ -47,5 +47,16 @@
       </div>
       <span class="car_card__price">Wynajem Cena Brutto: {{car.price}}zł</span>
     </article>
+    <a href="/cars" class="car-link">Zobacz więcej!</a>
+  </div>
+  <div class="about-us">
+    <h1 class="title">O nas</h1>
+    <h2 class="subtitle">Poznaj naszą flotę!</h2>
+    <p class="text">
+      Wypożyczalnia samochodów sportowych i luksusowych SexyCars skupia się na jednym celu, a mianowicie na Twojej pełnej satysfakcji z wynajmu auta sportowego u nas. Zagwarantujemy Ci maksimum radości i komfortu użytkowania aut sportowych w naszej wypożyczalni. Staramy się także, aby ta przyjemność nie była zbyt kosztowna. 
+    </p>
+    <p class="text">
+      Wynajmujemy swoje samochody sportowe w całej Polsce, a najczęściej w miastach: Kraków, Katowice, Wrocław, Warszawa bez pobierania kaucji i w dobrej cenie. Wypożyczamy nasze auta sportowe i luksusowe na dobę lub na dłuższy okres czyli długoterminowo. Wybierając wynajem w miastach<b> Kraków, Warszawa, Katowice, Wrocław, Rzeszów, Częstochowa, Kielce, Częstochowa, Bydgoszcz, Białystok</b> możesz spodziewać się od nas profesjonalnej obsługi. 
+    </p>
   </div>
 </main>
