--- a/static/main/main.html
+++ b/static/main/main.html
@@ -47,16 +47,85 @@
       </div>
       <span class="car_card__price">Wynajem Cena Brutto: {{car.price}}zł</span>
     </article>
-    <a href="/cars" class="car-link">Zobacz więcej!</a>
+    <a href="car" class="car-link"><b>Zobacz więcej!</b></a>
   </div>
   <div class="about-us">
-    <h1 class="title">O nas</h1>
-    <h2 class="subtitle">Poznaj naszą flotę!</h2>
-    <p class="text">
-      Wypożyczalnia samochodów sportowych i luksusowych SexyCars skupia się na jednym celu, a mianowicie na Twojej pełnej satysfakcji z wynajmu auta sportowego u nas. Zagwarantujemy Ci maksimum radości i komfortu użytkowania aut sportowych w naszej wypożyczalni. Staramy się także, aby ta przyjemność nie była zbyt kosztowna. 
-    </p>
-    <p class="text">
-      Wynajmujemy swoje samochody sportowe w całej Polsce, a najczęściej w miastach: Kraków, Katowice, Wrocław, Warszawa bez pobierania kaucji i w dobrej cenie. Wypożyczamy nasze auta sportowe i luksusowe na dobę lub na dłuższy okres czyli długoterminowo. Wybierając wynajem w miastach<b> Kraków, Warszawa, Katowice, Wrocław, Rzeszów, Częstochowa, Kielce, Częstochowa, Bydgoszcz, Białystok</b> możesz spodziewać się od nas profesjonalnej obsługi. 
-    </p>
+    <div class="content">
+      <h1 class="title">O nas</h1>
+      <h2 class="subtitle">Poznaj naszą flotę!</h2>
+      <p class="rental">
+        Wypożyczalnia samochodów sportowych i luksusowych SexyCars skupia się na jednym celu, a mianowicie na Twojej pełnej satysfakcji z wynajmu auta sportowego u nas. Zagwarantujemy Ci maksimum radości i komfortu użytkowania aut sportowych w naszej wypożyczalni. Staramy się także, aby ta przyjemność nie była zbyt kosztowna. 
+      </p>
+      <p class="rental">
+        Wynajmujemy swoje samochody sportowe w całej Polsce, a najczęściej w miastach: Kraków, Katowice, Wrocław, Warszawa bez pobierania kaucji i w dobrej cenie. Wypożyczamy nasze auta sportowe i luksusowe na dobę lub na dłuższy okres czyli długoterminowo. Wybierając wynajem w miastach<b> Kraków, Warszawa, Katowice, Wrocław, Rzeszów, Częstochowa, Kielce, Częstochowa, Bydgoszcz, Białystok</b> możesz spodziewać się od nas profesjonalnej obsługi. 
+      </p>
+      <img class="big-img"src="../images/map.svg" alt="map">
+      <p  class="rental">
+        Samochody sportowe to kategoria samochodów, w których większy nacisk kładziony jest na dynamikę jazdy niż na praktyczność. Jednocześnie są to samochody cywilne, które muszą spełniać wszystkie przepisy techniczne dotyczące ruchu na drogach publicznych. 
+      </p>
+      <p  class="rental">
+        Mogą to być: 
+      </p>
+      <div class="about-cars">
+        <div class="car">
+          <h2 class="car-title">
+            Auta zmodyfikowane z klasycznych nadwozi na nadwozia sportowe (np. w wyniku tuningu) 
+          </h2>
+          <img class="big-img" src="../images/car1.png" alt="">
+          <div class="car-model">2019 Toyota Corolla Hatchback (tuningowana)</div>
+        </div>
+        <div class="car">
+          <h2 class="car-title">
+            Typowo sportowe auta produkowane do jazdy dającej frajdę
+          </h2>
+          <img class="big-img" src="../images/car2.png" alt="">
+          <div class="car-model">2018 Lamborghini Huracan LP580</div>
+        </div>
+        <div class="car">
+          <h2 class="car-title">
+            Auta ekstremalne, przeznaczone do jazdy wyczynowej, wyścigowej
+            </h2>
+          <img class="big-img" src="../images/car3.png" alt="">
+          <div class="car-model">2016 Aston Martin Vulcan</div>
+        </div>
+      </div> 
+      <p class="rental">Zatem zanim wybierzesz auta sportowe do wypożyczenia czy kupienia, dowiedz się, który z nich warto najbardziej wybrać. My natomiast zapewnimy odpowiednie przygotowanie i profesjonalną obsługę:</p> 
+    </div>
+    <div class="adventages">
+      <div class="adventage">
+        <img src="../images/check-mark.png" alt="" class="icon">
+        <span class="text">Atrakcyjne ceny wynajmu</span>
+      </div>
+      <div class="adventage">
+        <img src="../images/check-mark.png" alt="" class="icon">
+        <span class="text">Większość aut bez kaucji</span>
+      </div>
+      <div class="adventage">
+        <img src="../images/check-mark.png" alt="" class="icon">
+        <span class="text">Możliwa dostawa aut w Krakowie</span>
+      </div>
+      <div class="adventage">
+        <img src="../images/check-mark.png" alt="" class="icon">
+        <span class="text">Najlepsza wypożyczalnia w Krakowie</span>
+      </div>
+      <div class="adventage">
+        <img src="../images/check-mark.png" alt="" class="icon">
+        <span class="text">Satysfakcja z wynajmu gwarantowana</span>
+      </div>
+      <div class="adventage">
+        <img src="../images/check-mark.png" alt="" class="icon">
+        <span class="text">Mamy piękne i szybkie auta sportowe</span>
+      </div>
+      <div class="adventage">
+        <img src="../images/check-mark.png" alt="" class="icon">
+        <span class="text">Wynajem krótko i długoterminowy</span>
+      </div>
+      <div class="adventage">
+        <img src="../images/check-mark.png" alt="" class="icon">
+        <span class="text">Wypożyczamy nasze auta do Ślubu</span>
+      </div>
+      <a href="../car/car.html" class="car-link"><b>Zobacz więcej!</b></a>
+      
+    </div>
   </div>
 </main>
